feat: [psyhedeliq] create first section this closes #3

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Red Spade Casino",
+  "name": "Play and win more money than you ever dreamed",
   "icons": [
     {
       "src": "favicon.ico",
