Change the favicon + the manifest root id and refresh the src folder.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Magic Roulette",
+  "name": "It's simple, bet and get rich over the night.",
   "icons": [
     {
       "src": "favicon.ico",
